--- a/login/index.html
+++ b/login/index.html
@@ -37,6 +37,10 @@
             </div>
             
         </section>
-    </main>    
+    </main>  
+    <footer>
+        <div class="icons">
+
+    </footer>  
 </body>
 </html>
