--- a/login/pets.html
+++ b/login/pets.html
@@ -12,9 +12,12 @@
     <header>
         <div class="contenedor">
             <img src="icono2.png" 
-            alt="es una imagen de una chica" class="cabezera">
-            <h1 class="titulo">PETS.COM</h1>
-            <h4 class="titulo2">GO BACK HOME</h4>
+            alt="es el logo de la empresa" class="cabezera">
+            <div class="titulo">
+                <h1 >PETS.COM</h1>
+                <h4 >GO BACK HOME</h4>
+            </div>
+
         </div>
         
         <nav>
